Replace Collections.emptyMap by Map.of